[metadata]
root_url = https://github.com/i2mint/
license = mit
author = OtoSense
version = 0.0.1
description = Interfacing with message-broker functionality
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = posted
display_name = posted

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

